# karmic.gochara

./: .claudeignore  .dockerignore  .env.bot.example  .env.example  .eslintrc.json  .firebaserc  .gcloudignore  .gitignore  ANALYSE_BLUEPRINTS.md  CHANGES.md  DEPLOIEMENT.md  DESIGN_SPEC.md  Dockerfile  FIREBASE_SETUP.md  GEMINI.md  KARMIC_GOCHARA_JOURNAL.md  LICENSE.md  LOCAL_AI_CONFIG.md  MCP_VALIDATION_REPORT.json  Main.qml  ORCHESTRATOR_STATE.md  PHI4_SYSTEM_PROMPT.md  README.md  VEILLE_AGENTS_IOS.md  __init__.py  _build_prompts_jero.py  _generate_pada_table.py  _prompt_cloud_jero.md  _prompt_cloud_jero_0706.md  _prompts_gemma4_jero.md  ai_interpret.py  annual_report.py  app.py  app_common.py  app_log.txt  app_log2.txt  apparmor.json  apply_translations.py  ask_local_ai_ngrok.py  aspect_selector.py  (+154 more)
.agents/: AGENTS.md  skills.json
.archive/: _check_deps.py  _test_bearer.py  _test_bearer2.py  _test_x_creds.py
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.hermes/: EXECUTION-PHASE-0.md  gemma_batch_log.json
.hermes-context/: 2026-06-16-session.md
android/: .agent-prompt-aab-build.md  build.gradle  capacitor.settings.gradle  fix_compile.py  release_notes_v61.txt  variables.gradle
astro/: .env.example  astro.config.mjs  capacitor.config.json  package-lock.json  package.json  tailwind.config.mjs
backups/: dataset_finetuning_20260712.jsonl
blueprints/: __init__.py  alerts.py  api.py  astro.py  auth.py  calendar.py  chat.py  cron.py  data.py  email.py  geocode.py  payments.py  public.py
chat_manager/: __init__.py  context_compressor.py  conversation_loop.py  firestore_journal.py  turn_context.py
docs/: finetune_export_plan.md  handoff_astro_finetune_validation.md
karmic_gochara.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
karmic_vault/: 00_MASTER_CONTEXT.md  01_output_rules.md  02_planet_keywords.md
scratch/: add_grok.py  download.py  download_model.sh  fix_fallback.py  fix_hooks.py  fix_plan.py  fix_plugin.py  migrate_to_firestore.py  push_model.sh  rewrite_plugin.py  rewrite_plugin_2.py  size_test.py  test_firestore.py  test_freemium.py  test_generate_ai.py  test_grok.py  test_grok2.py  test_grok3.py  test_hook.py  test_local.py  test_profiles_firestore.py
scripts/: __init__.py  apply_local_ai.py  backup_dataset.sh  convert_to_okf.py  finetune_kg.py  fix_java_version.ps1  test_rag.py  (+7 more)
(+571 files in other folders)
